--- a/ReadMe
+++ b/ReadMe
@@ -1,7 +1,6 @@
  My name is Orla Fitzmaurice. I am a student at the University of Limerick, Ireland. I am in my third year of the Statistics route of Mathematical Sciences.
  
- As part of my course I have learned a lot of Java and implemented it using Object Oriented Development. However I also have an interest in Machine Learning and spent 
- time learning it as part of my internhsip at Tyndall National Institute, Cork.
+ As part of my course I have learned a lot of Java and implemented it using Object Oriented Development. However I also have an interest in Machine Learning and spent time learning it as part of my internhsip at Tyndall National Institute, Cork.
  
  This is my public repositry to showcase some work I have done.
  
