--- a/ReadMe
+++ b/ReadMe
@@ -1,8 +1,9 @@
  My name is Orla Fitzmaurice. I am a student at the University of Limerick, Ireland. I am in my third year of the Statistics route of Mathematical Sciences.
  
- As part of my course I have learned a lot of Java and implemented it using Object Oriented Development. However I also have an interest in Machine Learning and spent time learning it as part of my internhsip at Tyndall National Institute, Cork.
+ As part of my course I have learned a lot of Java and implemented it using Object Oriented Development.I use MatLab regularly for Maths Assignmnets. However I also have an interest in Machine Learning and spent time learning it as part of my internhsip at Tyndall National Institute, Cork.
  
  This is my public repositry to showcase some work I have done.
  
  With regards to my JavaExamples, the code included here mainly comes froms Labs that I have carried out as part of my course.
+ With regards to my MatLabExamples, the code incuded comes from different Maths Assignments that I have used MatLab for.
  My PythonExamples include some exercises I carried out to help me learn Python over the course of my internhsip.
