--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,7 @@
- My name is Orla Fitzmaurice. I am a student at the University of Limerick, Ireland. I am in my third year of the Statistics route of Mathematical Sciences.
- 
- As part of my course I have learned a lot of Java and implemented it using Object Oriented Development. I use MatLab regularly for Maths Assignmnets. I use R for Data Analysis assignments as part of college. I also have an interest in Machine Learning through Python and I spent time learning it as part of my internhsip at Tyndall National Institute, Cork.
- 
- This is my public repositry to showcase some work I have done.
+My name is Orla Fitzmaurice. I am in my final year of the Statistics Route of Mathematical Sciences at the University of Limerick(UL).
+
+I am pasionate about applying my Maths and Stats skills to real world problems - this is why I find the areas of ML and Data Science so intriguing!
+
+I am a keen communicator - I love working as a tutor at UL. I find it rewarding getting the chance to help other students understand coding concepts. 
+
+This is my public repositry to showcase some of my coding skills - check out my linkedIn here to see what other skills I have https://www.linkedin.com/in/orla-fitzmaurice/
