--- a/ReadMe
+++ b/ReadMe
@@ -4,4 +4,4 @@ I am pasionate about applying my Maths and Stats skills to real world problems -
 
 I am a keen communicator - I love working as a tutor at UL. I find it rewarding getting the chance to help other students understand coding concepts. 
 
-This is my public repositry to showcase some of my coding skills - check out my linkedIn here to see what other skills I have https://www.linkedin.com/in/orla-fitzmaurice/
+This is my public repositry to showcase some of my coding skills - check out my linkedIn here to see what other skills I have: https://www.linkedin.com/in/orla-fitzmaurice/
